src/objects/Staff_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Check_In_Time__c</fullName>
        <label>Actual Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Staff Assets</relationshipLabel>
        <relationshipName>Staff_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Out_Time__c</fullName>
        <label>Check Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Check_In_Time__c</fullName>
        <label>Expected Check-In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Staff Assets</relationshipLabel>
        <relationshipName>Staff_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff Asset</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Staff Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>